[package]
name = "dbgrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sitter = "0.2.1"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
pdb = "0.8.0"
num-traits = "0.2.15"

[build-dependencies]
rust-sitter-tool = "0.2.1"

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_WindowsProgramming",
]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
]
